# lottery-assistant

./: .gitignore
docs/: 彩票助手-产品需求文档-V1.md
figma-make/: init.md
lottery-backend/: Dockerfile  pom.xml
lottery-crawler/: Dockerfile  main.py  pyproject.toml
lottery-crawler/src/lottery_crawler/: __init__.py  models.py  probe.py  sporttery_client.py  sporttery_parser.py
lottery-crawler/src/lottery_crawler/api/: __init__.py  app.py
lottery-crawler/src/lottery_crawler/cli/: __init__.py  probe.py
lottery-crawler/src/lottery_crawler/domain/: __init__.py
lottery-crawler/src/lottery_crawler/sources/: __init__.py
lottery-crawler/src/lottery_crawler/sources/sporttery/: __init__.py  client.py  parser.py
lottery-crawler/tests/: test_api.py  test_probe.py  test_sporttery_client.py  test_sporttery_parser.py
lottery-crawler/tests/fixtures/sporttery/: history_page_success.json
lottery-frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
lottery-frontend/src/api/: auth.ts  favorites.ts  http.ts  lottery.ts  notifications.ts  user.ts
lottery-frontend/src/assets/: adminLotterySync.css
lottery-frontend/src/components/: AnalyzeTab.vue  AppToast.vue  DrawDetailDialog.vue  HistoryTab.vue  LotteryNumberBall.vue  LotteryNumberGroup.vue  OverviewTab.vue  StateMessage.vue  UserAccountMenu.vue
lottery-frontend/src/composables/: useAdminSyncActions.ts  useAdminSyncAuth.ts  useAdminSyncDashboard.ts  useAdminSyncTaskDetail.ts
lottery-frontend/src/router/: index.ts
lottery-frontend/src/styles/: adminLotterySync.css  main.css
(+264 files in other folders)
